--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,89 +1,91 @@
 ﻿@model List<Product>?
 
 <div class="container-fluid p-0">
-  <div class="row mx-0 mt-0 pt-0">
-    <div class="col-sm-12 p-0">
-      @{
-        await Html.RenderPartialAsync("/Views/Partials/CarouselPartial.cshtml");
-      }
-    </div>
-  </div>
-  <section id="catalog">
-
-    <div class="row row-cols-2 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-1 g-sm-2 mt-3 px-1 mx-0 px-md-3 justify-content-center">
-      @foreach (Product p in Model!)
-      {
-        <div class="col">
-          <a href="@Url.ActionLink(p.name.ToLower(), p.groups?.FirstOrDefault()?.name?.ToLower())" class="nohover">
-            <div class="card">
-              <img src="@p.images?.FirstOrDefault(i => i.Side == ImageSide.front && i.Size == ImageSize.m)?.Url" class="card-img px-3" style="object-fit:contain" alt="@p.name" height="500">
-              <div class="card-body">
-                <h5 class="card-title text-center nohover">@p.name</h5>
-                <p class="card-text fa-sm text-end">
-                  @p.maxPrice <i class="fa fa-rub nohover"></i>
-                </p>
-              </div>
-            </div>
-          </a>
+    <div class="row mx-0 mt-0 pt-0">
+        <div class="col-sm-12 p-0">
+            @{
+                await Html.RenderPartialAsync("/Views/Partials/CarouselPartial.cshtml");
+            }
         </div>
-      }
     </div>
-    @*
-      @if (!Startup.Environment.IsDevelopment())
-      {
-      <div class="row row-cols-2 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 row-cols-xl-5 g-1 g-sm-2 mt-3 px-1 px-md-3">
-      @foreach (Product p in Model!)
-      {
-      <div class="col">
-      <a href="@Url.ActionLink("Product","Home",new {id = p.id})" class="">
-      <div class="card h-100 pb-0" style="justify-content: center;align-items: center;overflow: hidden;">
-      <img src="@p.imageUrl" class="card-img" alt="@p.name">
-      <div class="card-body">
-      <h5 class="card-title text-center">@p.name</h5>
-      <p class="card-text fa-sm text-end">
-      @p.maxPrice <i class="fa fa-rub opacity-100" style="color:white;"></i>
-      </p>
-      </div>
-      </div>
-      </a>
-      </div>
-      }
-      </div>
-      }
-      else
-      {
-      <div class="row row-cols-1">
-      @foreach (Product p in Model!)
-      {
-      <div class="col mx-auto">
-      <div class="card" style="max-width: 540px;overflow: hidden;align-items: center;justify-content: center;">
-      <div class="row g-0">
-      <div class="col-md-4">
-      <img src="@p.imageUrl" class="img-fluid rounded-start" alt="@p.name">
-      </div>
-      <div class="col-md-8">
-      <div class="card-body">
-      <h5 class="card-title">@p.name</h5>
-      <p class="card-text">@p.description</p>
-      <p class="card-text">@p.maxPrice</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
-      </div>
-      </div>
-      </div>
-      </div>
-      }
-      </div>
-      }
-    *@
+    <section id="catalog">
+
+        <div class="row row-cols-2 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-1 g-sm-2 mt-3 px-1 mx-0 px-md-3 justify-content-center">
+            @foreach (Product p in Model!)
+            {
+                <div class="col">
+                    <a href="@Url.ActionLink(p.name.ToLower(), p.groups?.FirstOrDefault()?.name?.ToLower())" class="nohover">
+                        <div class="card">
+                            <div class="card-img-bottom">
+                                <img src="@p.images?.FirstOrDefault(i => i.Side == ImageSide.front && i.Size == ImageSize.m)?.Url" class="card-img px-3" style="object-fit:contain" alt="@p.name" height="500">
+                            </div>
+                            <div class="card-body pt-0">
+                                <h5 class="card-title fa-2x text-center nohover">@p.name</h5>
+                                <p class="card-text fa-sm text-center">
+                                    @p.maxPrice <i class="fa fa-rub nohover"></i>
+                                </p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            }
+        </div>
+        @*
+            @if (!Startup.Environment.IsDevelopment())
+            {
+            <div class="row row-cols-2 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 row-cols-xl-5 g-1 g-sm-2 mt-3 px-1 px-md-3">
+            @foreach (Product p in Model!)
+            {
+            <div class="col">
+            <a href="@Url.ActionLink("Product","Home",new {id = p.id})" class="">
+            <div class="card h-100 pb-0" style="justify-content: center;align-items: center;overflow: hidden;">
+            <img src="@p.imageUrl" class="card-img" alt="@p.name">
+            <div class="card-body">
+            <h5 class="card-title text-center">@p.name</h5>
+            <p class="card-text fa-sm text-end">
+            @p.maxPrice <i class="fa fa-rub opacity-100" style="color:white;"></i>
+            </p>
+            </div>
+            </div>
+            </a>
+            </div>
+            }
+            </div>
+            }
+            else
+            {
+            <div class="row row-cols-1">
+            @foreach (Product p in Model!)
+            {
+            <div class="col mx-auto">
+            <div class="card" style="max-width: 540px;overflow: hidden;align-items: center;justify-content: center;">
+            <div class="row g-0">
+            <div class="col-md-4">
+            <img src="@p.imageUrl" class="img-fluid rounded-start" alt="@p.name">
+            </div>
+            <div class="col-md-8">
+            <div class="card-body">
+            <h5 class="card-title">@p.name</h5>
+            <p class="card-text">@p.description</p>
+            <p class="card-text">@p.maxPrice</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+            </div>
+            </div>
+            </div>
+            </div>
+            }
+            </div>
+            }
+        *@
 
 
-  </section>
+    </section>
 </div>
 
 <div class="side-toggler">
-  <div class="btn-anim">
-    <a class="btn btn-main" href="#catalog">КАТАЛОГ</a>
-  </div>
+    <div class="btn-anim">
+        <a class="btn btn-main" href="#catalog">КАТАЛОГ</a>
+    </div>
 </div>
 
